<resources>
    <string name="app_name">AndroProj</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="search">Search</string>
    <string name="client_Info">Client info</string>
    <string name="log_out">Logout</string>

    <string name="actionButton">actionButton</string>
    <string name="adventureButton">adventureButton</string>
    <string name="fPSButton">fPSButton</string>
    <string name="puzzleButton">puzzleButton</string>
    <string name="rPGButton">rPGButton</string>
    <string name="sportsButton">sportsButton</string>
    <string name="strategyButton">strategyButton</string>
    <string name="survivalButton">survivalButton</string>
</resources>